--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 #add:hover,
 #delete:hover {
-  background: rgb(31, 20, 181);
+  background: rgb(1, 0, 6);
   color: white;
   transition: 0.5s;
 }
@@ -65,24 +65,42 @@ body {
 }
 
 #box {
-display: inline-block;
-background: lavender;
-height: auto;
-width: auto;
-text-align: center;
-margin: 5px;
+  display: inline-block;
+  background: lavender;
+  height: auto;
+  width: auto;
+  text-align: center;
+  margin: 5px;
 
-border-radius: 15px;
-  
+  border-radius: 15px;
 }
-#box p,h5{
-margin: 10px;
-
-
+#box p,
+h5 {
+  margin: 10px;
 }
 
-#mainbox{
+#mainbox {
   padding: 45px;
   display: block;
-  
+  text-align: center;
+}
+
+/* Responsive Code */
+
+@media (max-width: 1424px) {
+  body {
+    background-color: rgb(142, 137, 199);
+  }
+
+  #delete {
+    background-color: rgb(62, 39, 193);
+    color: rgb(255, 249, 249);
+  }
+
+  #container {
+    padding: 20px;
+  }
+  #box {
+    margin: 10px;
+  }
 }
