--- a/style.css
+++ b/style.css
@@ -120,3 +120,29 @@ h5 {
     margin: 10px;
   }
 }
+
+.noInputText {
+  visibility: hidden;
+  color: rgb(255, 0,0);
+  text-align: center;
+  border-radius: 6px;
+  padding: 7px 5px;
+  margin: auto ;
+  font-size: large;
+}
+
+.show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
