--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h5 {
 }
 
 .light-mode {
-  background-color: #E0FFFF;
+  background-color: #E6E6FA;
 }
 .light-mode header nav div h1{
   color: #3a016f;
