--- a/style.css
+++ b/style.css
@@ -48,9 +48,25 @@ body {
   backdrop-filter: blur(5px);
   z-index: 15;
 }
+#toggleDarkModeBtn {
+  margin-left: 30px;
+  padding: 7px;
 
+  width: 120px;
+  font-size: 1.1rem;
+  font-family: "Varela Round", sans-serif;
+  color: rgb(23, 26, 57);
+  background-color: rgb(168, 160, 242);
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+}
+#add{
+  width: 100px;
+}
 #logo {
   letter-spacing: 2px;
+  color: #ced4e2;
 }
 
 #container {
@@ -85,10 +101,21 @@ body {
   border-radius: 25px;
   outline: none;
   cursor: pointer;
-  border: none;
+  border: 1px solid rgb(255, 249, 249);
+  /* border-color: transparent; */
+}
+#edit {
+  margin: 10px 5px;
+  padding: 5px 10px;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  /* border: none; */
+  border: 1px solid rgb(255, 249, 249);
 }
 
 #add:hover,
+#edit:hover,
 #delete:hover {
   background: #2196f3;
   color: white;
@@ -103,7 +130,7 @@ body {
 
 #box {
   display: inline-block;
-  background: lavender;
+  /* background: rgb(109, 109, 225); */
   height: auto;
   width: auto;
   text-align: center;
@@ -168,4 +195,80 @@ h5 {
 @keyframes fadeIn {
   from {opacity: 0;}
   to {opacity:2 ;}
+}
+
+.light-mode {
+  background-color: #E6E6FA;
+}
+.light-mode header nav div h1{
+  color: #8c50c4;
+  font-weight:900;
+}
+.light-mode span.boxtext {
+  color: black;
+}
+
+.dark-mode {
+  background-color: rgb(0, 37, 63);
+}
+.dark-mode span.boxtext {
+  color: white;
+}
+
+
+        /* Light Mode Button Styles
+        --------------------------- */ 
+        .light-mode-button {
+            background:0;
+            border: 0;
+            box-sizing: border-box;
+            cursor: pointer;
+            height: 40px;
+            width: 100px;
+            position: relative;
+            border: 1px solid rgba(255,255,255,0);
+        }
+        .light-mode-button:focus {
+            outline:none; /* Not ideal for accessibility */
+        }
+        .light-mode-button span:nth-child(1) {
+            position: absolute;
+            top:0;
+            left:0;
+            width: 100px;
+            height:40px;
+            border-radius: 20px;
+            background-color: #d6d7db;
+            box-shadow: inset 1px 1px 3px 0 rgb(0 0 0 / 40%);
+            transition: .3s;
+        }
+        .light-mode-button span:nth-child(2) {
+            position: absolute;
+            top:5px;
+            left:5px;
+            width: 30px;
+            height: 30px;
+            background-color: #fff;
+            border-radius: 50%;
+            box-shadow: 1px 1px 2px 0 rgb(0 0 0 / 40%);
+            transition: .3s;
+        }
+    
+/* Light & Dark Mode Styles
+--------------------------- */ 
+/* body {
+  background-color: #f6f6f6;
+  transition: background-color .3s;
+} */
+body[light-mode=dark] {
+  background-color: #141516;
+  color: #ced4e2;
+}
+body[light-mode="dark"] .light-mode-button span:nth-child(1){
+  background-color: #ced4e2;
+  color: #141516;
+}
+body[light-mode=dark] .light-mode-button span:nth-child(2) {
+  left: 65px;
+  background-color: #141516;
 }
