--- a/style.css
+++ b/style.css
@@ -201,8 +201,18 @@ h5 {
   color: #3a016f;
   font-weight:900;
 }
+.light-mode .welcome-message  h2{
+  color: #3a016f;
+  font-weight:900;
+}
+
+
 .light-mode span.boxtext {
   color: black;
+}
+.dark-mode .welcome-message  h2{
+  color: #eedcff;
+  font-weight:900;
 }
 
 .dark-mode {
