Edit functionality improved

--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ h5 {
   color: #a35ae8;
   font-weight:900;
 }
+.note-edit-heading{
+  color: #a35ae8;
+  font-weight:900;
+}
 
 
 .light-mode span.boxtext {
