--- a/style.css
+++ b/style.css
@@ -144,7 +144,10 @@ h5 {
   margin: 10px;
 
 }
-
+#box input{
+  width: 70%;
+  text-align: center;
+}
 #mainbox {
   padding: 45px;
   display: block;
@@ -179,6 +182,10 @@ h5 {
   padding: 7px 5px;
   margin: auto ;
   font-size: large;
+}
+
+.hidden{
+  display: none !important;
 }
 
 .show {
