--- a/style.css
+++ b/style.css
@@ -174,6 +174,32 @@ h5 {
   }
 }
 
+@media (max-width: 520px) {
+  #navbar {
+    align-items: center;
+  }
+  .light-mode header nav div h1 {
+    font-size: 21px;
+  }
+  .light-mode-button span:nth-child(1) {
+    width: 60px !important;
+    height: 25px !important;
+    top: 8px !important;
+  }
+  .light-mode-button span:nth-child(2) {
+    width: 16px !important;
+    height: 14px !important;
+    top: 13px !important;
+  }
+  .light-mode-button {
+    width: 50px !important;
+  }
+  body[light-mode="dark"] .light-mode-button span:nth-child(2) {
+    left: 40px !important;
+  }
+}
+
+
 .noInputText {
   visibility: hidden;
   color: #ea4b8b;
