--- a/style.css
+++ b/style.css
@@ -157,7 +157,62 @@ h5 {
   display: block;
   text-align: center;
 }
-
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  min-height: 30px;
+}
+footer .wave{
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: url('footer/wave.png');
+  background-size: 1000px 100px;
+  opacity: 0.7;
+}
+footer .wave#wave1{
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWave 6s linear infinite;
+}
+footer .wave#wave2{
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animateWave 3s linear infinite;
+}
+footer .wave#wave3{
+  z-index: 1000;
+  opacity: 0.4;
+  bottom: 15px;
+  animation: animateWave 4s linear infinite;
+}
+footer .wave#wave4{
+  z-index: 1000;
+  opacity: 1;
+  bottom: 20px;
+  animation: animateWave_02 2s linear infinite;
+}
+@keyframes animateWave{
+  0%{
+    background-position-x: 1000px;
+  }
+  100%{
+    background-position-x: 0;
+  }
+}
+@keyframes animateWave_02{
+  0%{
+    background-position-x: 0;
+  }
+  100%{
+    background-position-x: 1000px;
+  }
+}
 /* Responsive Code */
 
 @media (max-width: 1424px) {
