--- a/style.css
+++ b/style.css
@@ -363,3 +363,44 @@ animation-fill-mode: forwards;
 margin-top: 3%;
 }
 }
+#footer{
+  /* position: sticky; */
+  margin-top: 9rem;
+  bottom: 0;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items:flex-start;
+  padding: 1.1rem 1.5rem;
+  background: rgba(255, 255, 255, 0.1);
+  color: grey;
+  font-family: 'Montserrat', sans-serif;
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 15;
+}
+.social-icons{
+  display: flex;
+  color: #a35ae8;
+  letter-spacing: 20px;
+  font-size: 24.5px;
+  
+}
+
+ 
+#linkedin:hover{
+
+color: #04669A;
+}
+#github:hover{
+  color: #000;
+}
+#twitter:hover{
+  color: #00acee;
+}
+#insta:hover{
+  color: 
+    #bc1888;
+}
