--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ footer .wave{
   left: 0;
   width: 100%;
   height: 100px;
-  background: url('footer/wave.png');
+  background: url('../img/footer/wave.png');
   background-size: 1000px 100px;
   opacity: 0.7;
   z-index: -15;
