--- a/style.css
+++ b/style.css
@@ -14,6 +14,47 @@ body {
   height: 90%;
   width: 100%;
 }
+/*var color*/
+:root {
+  --track-bg-color: rgb(138, 127, 255);
+  --thumb-color: #4001a5;
+  --bg-thumb-hover-color: #210057;
+  --navbar-color: rgba(255, 255, 255, 0.1);
+  --box-shadow-color: rgba(0, 0, 0, 0.5);
+  --navbar-border-color: rgba(255, 255, 255, 0.5);
+  --texte-btn-color:rgb(23, 26, 57);
+  --bg-btn-color: rgb(168, 160, 242);
+  --searching-color:  lavender;
+  --searching-focus-color: #7e6ce4;
+  --searching-hover-color: rgb(96, 86, 203);
+  --delete-border-color: rgb(255, 249, 249);
+  --edit-color: #c9ffda;
+  --bg-hover-color: #2196f3;
+  --bg-delete-color: #ec4811;
+  --bg-mobile-color: rgb(142, 137, 199);
+  --text-mobile-color: #ea4b8b;
+  --lite-mode-mobile-bg-color: #e6e6fa;
+  --lite-mode-mobile-color:#a35ae8;
+  --black-color: black;   
+  --delet-color: #ffb1b1ea;
+  --texte-h2-mob-color: #eedcff;
+  --boxtext-color: rgb(0, 37, 63);
+  --white-color: white;
+  --border-button-mob-color: rgba(255, 255, 255, 0);
+  --box-shadow-mob-color: rgb(0 0 0 / 40%);
+  --bg-buttom-mob-color: #d6d7db;
+  --bg-body-mob-color: #140026;
+  --mode-button--mob-color: #ced4e2;
+  --mobile-body-dark: #141516;
+  --bg-mobile-msg-color: #ec4811;
+  --msg-bg-color: #00a186;
+  --box-shadow-msg-color: rgb(149 149 162);
+  --box-shadow-mob-msg-color: rgb(0 0 0 / 5%);
+  --icon-mob-color: #7b46ac;
+  --twitter-hover-color: #00acee;
+  --insta-mobail-color: #bc1888;
+  --linkedin-mob-color: #04669A;
+}
 
 ::-webkit-scrollbar {
   width: 12px;
@@ -21,16 +62,16 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgb(138, 127, 255);
+  background-color: var(--track-bg-color);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #4001a5;
+  background: var(--thumb-color);
   border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #210057;
+  background: var(--bg-thumb-hover-color);
 }
 
 #navbar {
@@ -41,12 +82,12 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   padding: 1rem 1.5rem;
-  background: rgba(255, 255, 255, 0.1);
-  color: white;
+  background: var(--navbar-color);
+  color: var(--white-color);
   font-family: 'Montserrat', sans-serif;
-  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  border-right: 1px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 20px 20px 50px var(--box-shadow-color);
+  border-bottom: 1px solid var(--navbar-border-color);
+  border-right: 1px solid var(--navbar-border-color);
   backdrop-filter: blur(5px);
   z-index: 15;
 }
@@ -57,8 +98,8 @@ body {
   width: 120px;
   font-size: 1.1rem;
   font-family: 'Varela Round', sans-serif;
-  color: rgb(23, 26, 57);
-  background-color: rgb(168, 160, 242);
+  color: var(--texte-btn-color);
+  background-color: var(--bg-btn-color);
   border-radius: 10px;
   cursor: pointer;
   font-weight: bold;
@@ -78,16 +119,16 @@ body {
     
   }
   #searching{
-    border: 2px solid lavender;
+    border: 2px solid var(--searching-color);
     outline: none;
     border-radius: 12px;
     padding: 6px;
   }
   #searching:focus{
-    box-shadow: 0 0 4px #7e6ce4, 0 0 8px #7e6ce4, 0 0 12px #7e6ce4;
+    box-shadow: 0 0 4px var(--searching-focus-color), 0 0 8px var(--searching-focus-color), 0 0 12px var(--searching-focus-color);
   }
   #searching:hover{
-    border: 2px solid rgb(96, 86, 203);
+    border: 2px solid var( --searching-hover-color);
     transition: all 0.25s ease;
   }
 
@@ -111,7 +152,7 @@ body {
 #notebox input {
   width: 50%;
   padding: 10px;
-  border: 2px solid lavender;
+  border: 2px solid var(--searching-color);
   border-radius: 15px;
   outline: none;
   text-align: center;
@@ -119,7 +160,7 @@ body {
 }
 
 #note:hover {
-  border: 2px solid rgb(96, 86, 203);
+  border: 2px solid var( --searching-hover-color);
   transition: all 0.25s ease;
 }
 
@@ -131,7 +172,7 @@ body {
   outline: none;
   cursor: pointer;
   /* border: none; */
-  border: 1px solid rgb(255, 249, 249);
+  border: 1px solid var(--delete-border-color);
 }
 .copy{
   margin: 10px 5px;
@@ -140,7 +181,7 @@ body {
   outline: none;
   cursor: pointer;
   /* border: none; */
-  border: 1px solid rgb(255, 249, 249);
+  border: 1px solid var(--delete-border-color);
 }
 .edit {
   margin: 10px 5px;
@@ -149,23 +190,23 @@ body {
   outline: none;
   cursor: pointer;
   /* border: none; */
-  border: 1px solid rgb(255, 249, 249);
-  background-color: #c9ffda;
+  border: 1px solid var(--delete-border-color);
+  background-color: var(--edit-color);
 }
 
 #add:hover,
 .edit:hover,
 .copy:hover{
-  background: #2196f3;
-  color: white;
-  box-shadow: 0 0 4px #2196f3, 0 0 8px #2196f3, 0 0 12px #2196f3;
+  background: var(--bg-hover-color);
+  color: var(--white-color);
+  box-shadow: 0 0 4px var(--bg-hover-color), 0 0 8px var(--bg-hover-color), 0 0 12px var(--bg-hover-color);
   transition: 0.5s;
   transform: scale(1.05);
 }
 #delete:hover {
-  background: #ec4811;
-  color: white;
-  box-shadow: 0 0 4px #ec4811, 0 0 8px #ec4811, 0 0 12px #ec4811;
+  background: var(--bg-delete-color);
+  color: var(--white-color);
+  box-shadow: 0 0 4px var(--bg-delete-color), 0 0 8px var(--bg-delete-color)1, 0 0 12px var(--bg-delete-color);
   transition: 0.5s;
   transform: scale(1.05);
 }
@@ -173,7 +214,7 @@ body {
   text-align: center;
 }
 #note:focus {
-  box-shadow: 0 0 4px #7e6ce4, 0 0 8px #7e6ce4, 0 0 12px #7e6ce4;
+  box-shadow: 0 0 4px var(--searching-focus-color), 0 0 8px var(--searching-focus-color), 0 0 12px var(--searching-focus-color);
 }
 .box {
   display: inline-block;
@@ -182,7 +223,7 @@ body {
   width: auto;
   text-align: center;
   margin: 5px;
-  box-shadow: 0 0 4px #7e6ce4, 0 0 8px #7e6ce4, 0 0 12px #7e6ce4;
+  box-shadow: 0 0 4px var(--searching-focus-color), 0 0 8px var(--searching-focus-color), 0 0 12px var(--searching-focus-color);
   border-radius: 15px;
 }
 
@@ -203,12 +244,12 @@ h5 {
 
 @media (max-width: 1424px) {
   body {
-    background-color: rgb(142, 137, 199);
+    background-color: var(--bg-mobile-color);
   }
 
   #delete {
-    background-color: #ffb1b1ea;
-    color: rgb(0, 0, 0);
+    background-color: var(--delet-color);
+    color: var(--black-color);
   }
 
   #container {
@@ -261,7 +302,7 @@ h5 {
 
 .noInputText {
   visibility: hidden;
-  color: #ea4b8b;
+  color: var(--text-mobile-color);
   text-align: center;
   border-radius: 6px;
   padding: 7px 5px;
@@ -294,38 +335,38 @@ h5 {
 }
 
 .light-mode {
-  background-color: #e6e6fa;
+  background-color: var(--lite-mode-mobile-bg-color);
 }
 #button_color{
-  background-color: #000;
+  background-color: var(--black-color);
 }
 .light-mode header nav div h1 {
-  color: #a35ae8;
+  color: var( --lite-mode-mobile-color);
   font-weight: 900;
 }
 .light-mode .welcome-message h2 {
-  color: #a35ae8;
+  color: var( --lite-mode-mobile-color);
   font-weight: 900;
   display: sticky;
 }
 .note-edit-heading {
-  color: #a35ae8;
+  color: var( --lite-mode-mobile-color);
   font-weight: 900;
 }
 
 .light-mode span.boxtext {
-  color: black;
+  color: var(--black-color);
 }
 .dark-mode .welcome-message h2 {
-  color: #eedcff;
+  color: var(--texte-h2-mob-color);
   font-weight: 900;
 }
 
 .dark-mode {
-  background-color: rgb(0, 37, 63);
+  background-color: var(--boxtext-color);
 }
 .dark-mode span.boxtext {
-  color: white;
+  color: var( --white-color);
 }
 
 .welcome-message {
@@ -349,7 +390,7 @@ h5 {
   height: 40px;
   width: 100px;
   position: relative;
-  border: 1px solid rgba(255, 255, 255, 0);
+  border: 1px solid var( --border-button-mob-color);
 }
 .light-mode-button:focus {
   outline: none; /* Not ideal for accessibility */
@@ -361,8 +402,8 @@ h5 {
   width: 100px;
   height: 40px;
   border-radius: 20px;
-  background-color: #d6d7db;
-  box-shadow: inset 1px 1px 3px 0 rgb(0 0 0 / 40%);
+  background-color: var(--bg-buttom-mob-color);
+  box-shadow: inset 1px 1px 3px 0 var(--box-shadow-mob-color);
   transition: 0.3s;
 }
 .light-mode-button span:nth-child(2) {
@@ -371,9 +412,9 @@ h5 {
   left: 5px;
   width: 30px;
   height: 30px;
-  background-color: #fff;
+  background-color: var( --white-color);
   border-radius: 50%;
-  box-shadow: 1px 1px 2px 0 rgb(0 0 0 / 40%);
+  box-shadow: 1px 1px 2px 0 var(--box-shadow-mob-color);
   transition: 0.3s;
 }
 
@@ -384,16 +425,16 @@ background-color: #f6f6f6;
 transition: background-color .3s;
 } */
 body[light-mode='dark'] {
-  background-color: #140026;
-  color: #ced4e2;
+  background-color: var (--bg-body-mob-color);
+  color: var(--mode-button--mob-color);
 }
 body[light-mode='dark'] .light-mode-button span:nth-child(1) {
-  background-color: #ced4e2;
-  color: #141516;
+  background-color: var(--mode-button--mob-color);
+  color: var(--mobile-body-dark);
 }
 body[light-mode='dark'] .light-mode-button span:nth-child(2) {
   left: 65px;
-  background-color: #141516;
+  background-color: var(--mobile-body-dark);
 }
 
 .msg {
@@ -407,9 +448,9 @@ body[light-mode='dark'] .light-mode-button span:nth-child(2) {
   display: none;
   border-radius: 5px;
   font-size: 18px;
-  background: #00a186;
-  color: white;
-  box-shadow: 0 10px 15px -3px rgb(149 149 162), 0 4px 6px -2px rgb(0 0 0 / 5%);
+  background: var(--msg-bg-color);
+  color: var(--white-color);
+  box-shadow: 0 10px 15px -3px var(--box-shadow-msg-color), 0 4px 6px -2px var( --box-shadow-mob-msg-color);
   transition: transform ease-in-out 0.2s;
 }
 .show.msg {
@@ -493,13 +534,13 @@ footer .wave#wave4{
   align-items:flex-start;
   padding: 1.1rem 1.5rem;
   font-family: 'Montserrat', sans-serif;
-  border-bottom: 1px solid rgba(255, 255, 255, 0);
-  border-right: 1px solid rgba(255, 255, 255, 0);
+  border-bottom: 1px solid var(--border-button-mob-color);
+  border-right: 1px solid var(--border-button-mob-color);
   z-index: 100;
 }
 .social-icons{
   display: flex;
-  color: #7b46ac;
+  color: var(--icon-mob-color);
   letter-spacing: 20px;
   font-size: 24.5px;
   z-index: 20;
@@ -509,15 +550,15 @@ footer .wave#wave4{
  
 #linkedin:hover{
 
-color: #04669A;
+color: var(--linkedin-mob-color);
 }
 #github:hover{
-  color: #000;
+  color: var(--black-color);
 }
 #twitter:hover{
-  color: #00acee;
+  color: var(--twitter-hover-color);
 }
 #insta:hover{
   color: 
-    #bc1888;
+    var(insta-mobail-color);
 }
